charts/master-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "ad4ffec16d23c4007baab5ecabda6506-1866700697.us-west-2.elb.amazonaws.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: opensearch-cluster-master
            port:
              number: 9200
