charts/opensearch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource1
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "a6db0cfad89974c1fae8d8bbc66e42c8-1684122232.us-west-2.elb.amazonaws.com"
    http:
      paths:
      - pathType: Prefix
        path: /os(/|$)(.*)
        backend:
          service:
            name: opensearch-cluster-data
            port:
              number: 9200
